GNOME Bugzilla – Bug 770544
Switching from russian layout to pinyin does not work
Last modified: 2020-01-02 10:58:14 UTC
[Copied from my emails] If I have these sources set up: $ gsettings get org.gnome.desktop.input-sources sources [('xkb', 'us'), ('xkb', 'ru'), ('ibus', 'pinyin')] Then after switching from RU layout to pinyin (i.e. cycling forward) I still get russian characters. Pinyin only works when I switch from US layout to it (i.e. cycling backward). Also, sometimes (I only got that a couple of times), when switching from pinyin to US I still get pinyin input.
I don't think this is an issue with gnome-flashback, as it also happens in gnome-shell. I suspect it's an IBus issue, so I opened a bug there: https://github.com/ibus/ibus/issues/1912
https://gitlab.gnome.org/GNOME/gnome-flashback/commit/5509699e1d352d53f5f22ea38843cf2f4b8cb892