input-sources: don't use "default" as layout

https://bugzilla.gnome.org/show_bug.cgi?id=770544